# atulify-organizer

./: PLAN.md  README.md  package.json
.claude/: settings.local.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/storage/: mod.rs
src/components/: BragDocCard.css  BragDocCard.tsx  BragDocDetail.tsx  BragDocForm.css  BragDocForm.tsx  Button.css  Button.tsx  DropdownMenu.css  DropdownMenu.tsx  EntryForm.tsx  ImageLightbox.css  ImageLightbox.tsx  ImageUpload.css  ImageUpload.tsx  Modal.css  Modal.tsx  Navigation.css  Navigation.tsx  Onboarding.css  Onboarding.tsx  ProgressCircle.css  ProgressCircle.tsx  index.ts
src/hooks/: useAppData.ts  useGitHubStats.ts  useNotifications.ts  usePrData.ts
src/styles/: global.css  themes.css
src/types/: index.ts
src/utils/: exportMarkdown.ts
src/views/: BacklogView.css  BacklogView.tsx  BragDocView.css  BragDocView.tsx  MyPrsView.tsx  NotesView.css  NotesView.tsx  NotificationsView.css  NotificationsView.tsx  PrsView.css  PrsView.tsx  SettingsView.tsx  TasksView.css  TasksView.tsx  TodayView.css  TodayView.tsx  Views.css  index.ts
